# phys_units

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ci.yml  cmake_uninstall.cmake.in  phys_units_config.cmake
.github/workflows/: compile_test.yml  compiler-matrix.yml
hooks/: pre-commit
inc/: phys_angle.hpp  phys_chrono.hpp  phys_math.hpp  phys_string.hpp  phys_units.hpp
scripts/: install.sh  setup.sh
test/: CMakeLists.txt  README.md  angle_test.cpp  basic_test.cpp  chrono_test.cpp  math_test.cpp
test/compiler_tests/: CMakeLists.txt  comps_and_stds_test.sh
